Cleaned up ipynb, and included a py version

--- a/co_river_basin_insert.ipynb
+++ b/co_river_basin_insert.ipynb
@@ -14,9 +14,11 @@
     "\n",
     "df_co_river_basin = pd.read_excel('Final_WWIS_UC_Event_Database.xls')\n",
     "\n",
+    "# USED TO VISUALIZE CURRENT COLUMN NAMES\n",
     "#for col in df_co_river_basin.columns: \n",
     "#    print(col)\n",
     "\n",
+    "# PANDAS FUNCTION THAT RENAMES DATAFRAME COLUMNS\n",
     "df_co_river_basin.rename(columns={'Search Source':'SearchSource',\n",
     "                                  'Article Citation': 'ArticleCitation',\n",
     "                                  'Article Title': 'ArticleTitle',\n",
@@ -29,11 +31,13 @@
     "                                  'Event Summary':'EventSummary',\n",
     "                                  'Intensity Value':'IntensityValue',\n",
     "                                  'Water Title':'WaterTitle'}, inplace=True)\n",
-    "    \n",
+    "\n",
+    "# USED TO VISUALIZE COLUMN NAME CHANGES\n",
     "#print('\\nFIXED NAMES:')    \n",
     "#for col in df_co_river_basin.columns: \n",
     "#    print(col)\n",
     "\n",
+    "# USED TO SEE SAMPLE OF THE DATAFRAME\n",
     "#df_co_river_basin"
    ]
   },
@@ -43,9 +47,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# GENERAL FORMATTING ESCAPE LINE I INCLUDE IN MOST DATAFRAMES TO INSTERT INTO DATABASES\n",
     "df_co_river_basin = df_co_river_basin.applymap(lambda x: x.encode('unicode_escape').decode('utf-8') if isinstance(x, str) else x)\n",
     "\n",
-    "# Remove empty rows\n",
+    "# REMOVE EMPTY ROWS\n",
     "df_co_river_basin = df_co_river_basin[pd.notnull(df_co_river_basin['Event'])]"
    ]
   },
@@ -63,17 +68,12 @@
     }
    ],
    "source": [
-    "def init_sqlite3(dbname):\n",
-    "    conn = sqlite3.connect(dbname)\n",
-    "    c = conn.cursor()\n",
-    "    c.execute(\"DROP TABLE IF EXISTS customer\")\n",
-    "    c.execute(\"CREATE TABLE customer (id INTEGER NOT NULL, name VARCHAR(255), PRIMARY KEY(id))\")\n",
-    "    conn.commit()\n",
-    "    return conn\n",
-    "\n",
+    "# CONNECTION TO LOCAL SQLITE DATABASE\n",
     "conn = sqlite3.connect('C:\\\\sqlite\\\\databases\\\\waterdb\\\\waterdb.db')\n",
     "c = conn.cursor()\n",
     "\n",
+    "# LOOP THROUGH DATAFRAME AND INSERT INTO SQLITE DB\n",
+    "# Note: this isn't very clean - I worked with the values section until it took everything. If I did this again, I'd probably run the 'replace' procedure across the dataframe futher above.\n",
     "for i, row in enumerate(df_co_river_basin.itertuples(), 1):\n",
     "    testEvent = pd.read_sql(\"SELECT Event FROM CO_River_Basin WHERE Event = \" + str(row.Event), conn)\n",
     "    if testEvent.empty == True:\n",
@@ -124,17 +124,9 @@
     "            set_trace()\n",
     "        sys.stdout.write('\\r' + 'Processed: ' + str(row.Event))\n",
     "    else:\n",
-    "        sys.stdout.write('\\r' + 'Processed: ' + str(row.Event))\n",
-    "        \n",
+    "        sys.stdout.write('\\r' + 'Processed: ' + str(row.Event))        \n",
     "sys.stdout.write('\\r' + 'Processed: ' + str(row.Event) + \"| FINISHED\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
